--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".login.LoginActivity">
+        <activity android:name="io.keepcoding.eh_ho.scenes.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".topics.TopicsActivity" />
-        <activity android:name=".posts.PostsActivity" />
+        <activity android:name="io.keepcoding.eh_ho.scenes.topics.TopicsActivity" />
+        <activity android:name="io.keepcoding.eh_ho.scenes.posts.PostsActivity" />
     </application>
 
 </manifest>
