--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".scenes.users.UsersActivity"></activity>
-        <activity android:name=".scenes.login.LoginActivity">
+
+        <activity
+            android:name=".scenes.login.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".scenes.topics.TopicsActivity" />
-        <activity android:name=".scenes.posts.PostsActivity" />
+
+        <activity
+            android:name=".scenes.topics.TopicsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".scenes.posts.PostsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".scenes.users.UsersActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".scenes.userDetail.UserDetailActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
