--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,10 @@ dependencies {
         exclude group: "com.android.support"
     }
 
+    implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt "androidx.room:room-compiler:2.3.0-alpha02"
+
     testImplementation 'org.json:json:20190722'
 
     testImplementation 'junit:junit:4.13.1'
