--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt "androidx.lifecycle:lifecycle-compiler:2.3.0-beta01"
 
-    implementation ("com.github.bumptech.glide:glide:4.11.0") {
-        exclude group: "com.android.support"
-    }
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'androidx.room:room-runtime:2.2.5'
     kapt "androidx.room:room-compiler:2.3.0-alpha02"
